--- a/src/main/g8/test/dynamic-test.html
+++ b/src/main/g8/test/dynamic-test.html
@@ -4,7 +4,8 @@
         function doLoad() {
             var script = document.createElement('script');
             script.src = "http://localhost:3000/bundle.js";
-
+            script.type = "module";
+            
             var css = document.createElement('link');
             css.rel = "stylesheet";
             css.href = "http://localhost:3000/bundle.js";
